clip the border at the dirty rectangle, bug 86249 r+sr=roc+moz